Review updates. (#3)